--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@ ul {
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 50px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 50px;
 }
 
 .square:focus {
@@ -47,5 +47,9 @@ ul {
 }
 
 .game-info {
-  margin-left: 20px;
+  margin-left: 32px;
+}
+
+.new-game {
+  margin-top: 32px;
 }
